# IFCD65

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  log.md  playground.md  recursos.md
.github/workflows/: run_script_on_pr.yml
certificados/freecodecamp/0.responsive-web-design/0.menu-cafeteria(html+css)/: menu.html  styles.css
certificados/freecodecamp/0.responsive-web-design/1.registration-form(html+css)/: form.html  styles.css
diapositivas/00.introduccion-al-curso/: index.html
diapositivas/00.ordenadores/: index.html
diapositivas/00.visual-code/: index.html
diapositivas/01.control-de-cambios/: 00.introduccion-a-git.html  02.trabajo-local-con-git.html  03.ramas-en-git.html  04.introduccion-a-github.html  05.configurar-ssh-github.html  index.html
entregables/: 01.git-y-github.md  02.html-y-css.md  03.js-algoritmos-y-estructuras-de-datos.md
playground/: .gitignore  README.md  context.json  exercise_list.json  pyproject.toml
playground/playground/: commands.py  main.py
playground/playground/html/básico/: no_valido.html  pg_01.html
repasos/: git.md  github.md
scripts/: test_html_are_valid.py
sesiones_de_preguntas/: 29.01.md
transcripciones/: 20.01.md  21.01.md  22.01.md
